# lauren-mcp

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  docs-requirements.txt  llms-full.txt  llms.txt  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: codeql.yml  docs.yml  lint.yml  release.yml  stale.yml  tests.yml
docs/: comparisons.md  index.md
docs/development/: index.md  release.md  versioning.md
docs/generated-reference/: client.md  server.md  types.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/guides/: decorators.md  error-handling.md  first-client.md  first-server.md  index.md  mcp-agent-tools.md  mcp-client.md  mcp-server.md  multiple-servers.md  per-tool-decorators.md  testing.md  tool-context.md  tool-lauren-params.md  using-with-lauren.md
docs/reference/: client.md  index.md  server.md  types.md
examples/filesystem/: .env.example  README.md  client.py  modal_deploy.py  pyproject.toml  server.py
examples/filesystem/tests/: conftest.py  test_basic_functionality.py  test_filesystem_e2e.py  test_filesystem_edge_cases.py  test_filesystem_integration.py  test_filesystem_unit.py
scripts/: check_llms_full.py  generate_api_docs.py
skills/: README.md
skills/mcp-agent-tools/: SKILL.md
skills/mcp-composition/: SKILL.md
skills/mcp-context/: SKILL.md
skills/mcp-per-tool-decorators/: SKILL.md
skills/mcp-testing/: SKILL.md
skills/mcp-transport-internals/: SKILL.md
skills/using-mcp-client/: SKILL.md
skills/using-mcp-server/: SKILL.md
src/lauren_mcp/: __init__.py  _bridge.py  _mcp_version.py  _types.py  llms-full.txt
src/lauren_mcp/_client/: __init__.py  _base_remote.py  _factory.py  _features.py  _oauth.py  _protocol.py  _sse.py  _stdio.py  _streamable.py  _ws.py
src/lauren_mcp/_server/: _binding.py  _catalog.py  _context.py  _dispatcher.py  _event_store.py  _exec_context.py  _handshake.py  _otel.py  _propagate.py  _registry.py  _session.py  _sse.py  _streamable.py  _subscriptions.py  _transport_security.py  _ws.py
src/lauren_mcp/cli/: __init__.py  _commands.py  _resolve.py
src/lauren_mcp/server/: __init__.py  _builtin_resources.py  _composition.py  _decorators.py  _docstring.py  _handlers.py  _memory_server.py  _meta.py  _module.py  _openapi.py  _schema.py  _uri.py
tests/: conftest.py
tests/docs/: __init__.py  test_decorators.py  test_error_handling.py  test_first_client.py  test_first_server.py  test_multiple_servers.py  test_reference_docs.py  test_testing_guide.py
tests/end_to_end/: test_client_e2e.py  test_e2e_bridge_pipeline.py  test_e2e_full_server.py  test_e2e_readme_example.py  test_e2e_validation_pipes_bg.py  test_execution_context_injection_e2e.py  test_per_tool_exception_handlers_e2e.py  test_per_tool_guards_e2e.py  test_per_tool_interceptors_e2e.py  test_per_tool_set_metadata_e2e.py  test_tool_stream_e2e.py  test_transport_e2e.py
tests/integration/: test_builtin_resources_integration.py  test_cancel_signal_integration.py  test_cli_commands_integration.py  test_client_integration.py  test_completion_integration.py  test_composition_coverage.py  test_context_integration.py  test_decorator_handler_integration.py  test_execution_context_injection_integration.py  test_mcp_bridge_registry.py  test_mcp_dispatcher_protocol.py  test_mcp_lauren_full_stack.py  test_mcp_lauren_guards_interceptors.py  test_mcp_lauren_integration_extended.py  test_mcp_lauren_ws_integration.py  test_mcp_lifespan_and_composition.py  test_mcp_propagate_metadata.py  test_mcp_server_guards.py  test_mcp_server_module.py  test_mcp_server_ws_frame.py  test_mcp_sse_guards_middleware.py  test_mcp_stdio_client_integration.py  test_mcp_streamable_http.py  test_per_tool_exception_handlers_integration.py  test_per_tool_guards_integration.py  test_per_tool_interceptors_integration.py  test_per_tool_set_metadata_integration.py  test_resource_subscriptions_integration.py  test_server_sse_streamable_coverage.py  test_tool_background_tasks_integration.py  test_tool_depends_integration.py  test_tool_header_integration.py  test_tool_pipe_integration.py  test_tool_state_integration.py  test_tool_stream_integration.py  test_transport_changes.py  test_validation_pipes_bg_integration.py
tests/unit/: conftest.py  test_builtin_resources.py  test_catalog_and_registry.py  test_cli_commands_coverage.py  test_cli_resolve.py  test_client_changes.py  test_client_features.py  test_client_transports_coverage.py  test_completion_handler.py  test_context_changes.py  test_decorator_meta_handler.py  test_decorators_coverage.py  test_decorators_coverage2.py  test_dispatcher_cancel_event.py  test_docstring_parsing.py  test_event_store.py  test_execution_context_injection.py  test_handlers_coverage.py  test_handlers_coverage2.py  test_handlers_coverage3.py  test_handlers_coverage4.py  test_lauren_annotation_pipes_bg.py  test_mcp_bridge.py  test_mcp_decorators.py  test_mcp_dispatcher.py  test_mcp_handlers.py  test_mcp_handshake.py  test_mcp_remote_client.py  test_mcp_session.py  test_mcp_stdio_client.py  test_mcp_types.py  test_memory_server.py  test_new_wire_types.py  test_oauth_client.py  test_openapi_coverage.py  test_otel.py  test_per_tool_exception_handlers.py  test_per_tool_guards.py  test_per_tool_interceptors.py  test_per_tool_metadata.py  (+19 more)
