[build-system]
requires = ["setuptools>=72", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lauren-mcp"
dynamic = ["version"]
description = "Model Context Protocol (MCP) server and client for the Lauren framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Lauren Contributors" }]
keywords = ["lauren", "mcp", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "lauren>=1.6.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
ws       = ["websockets>=12"]
http     = ["httpx>=0.27", "httpx-sse>=0.4"]
pydantic = ["pydantic>=2.0"]
msgspec  = ["msgspec>=0.18"]
all      = ["lauren-mcp[ws,http,pydantic,msgspec]"]
cli      = ["typer>=0.12", "python-dotenv>=1.0", "uvicorn>=0.31"]
dev  = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "nox>=2024.4",
    "prek>=0.3",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "griffe>=1.0",
    "setuptools-scm>=8.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
lmcp = "lauren_mcp.cli:app"

[project.urls]
Homepage      = "https://github.com/lauren-framework/lauren-mcp"
Documentation = "https://mcp.lauren-py.dev"
Repository    = "https://github.com/lauren-framework/lauren-mcp"
Changelog     = "https://github.com/lauren-framework/lauren-mcp/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"
version_scheme   = "post-release"
local_scheme     = "dirty-tag"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["S101"]
"noxfile.py" = []

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
warn_unused_ignores    = false
cache_dir              = "/tmp/mypy-cache-lauren-mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts      = "-m 'not benchmark and not eval'"
markers      = [
    "benchmark: performance benchmarks, excluded from default run",
    "eval: evaluation tests requiring live MCP servers, excluded from default run",
]
testpaths  = ["tests"]
pythonpath = ["src", "../lauren-framework"]

[tool.coverage.run]
source = ["src/lauren_mcp"]
omit   = ["tests/*"]

[tool.coverage.report]
fail_under   = 80
show_missing = true

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "typer>=0.26.7",
]
