[build-system]
requires = ["hatchling>=1.21", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "lauren-mcp"
dynamic = ["version"]
description = "Model Context Protocol (MCP) server and client for the Lauren framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Lauren Contributors" }]
keywords = ["lauren", "mcp", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "lauren>=1.6.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
ws       = ["websockets>=12"]
http     = ["httpx>=0.27", "httpx-sse>=0.4"]
pydantic = ["pydantic>=2.0"]
msgspec  = ["msgspec>=0.18"]
all      = ["lauren-mcp[ws,http,pydantic,msgspec]"]
cli      = ["typer>=0.12", "python-dotenv>=1.0", "uvicorn>=0.31"]

[project.scripts]
lmcp = "lauren_mcp.cli:app"

[project.urls]
Homepage      = "https://github.com/lauren-framework/lauren-mcp"
Documentation = "https://mcp.lauren-py.dev"
Repository    = "https://github.com/lauren-framework/lauren-mcp"
Changelog     = "https://github.com/lauren-framework/lauren-mcp/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+unknown"

[tool.hatch.build.targets.wheel]
packages = ["src/lauren_mcp"]
artifacts = ["src/lauren_mcp/py.typed", "src/lauren_mcp/llms-full.txt", "src/lauren_mcp/llms.txt"]

[tool.hatch.build.targets.sdist]
# Only include what a downstream user or contributor needs
include = [
    "src/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "llms-full.txt",
    "llms.txt",
    "pyproject.toml",
]
exclude = [
    "prds/",
    "skills/",
    "tests/",
    "examples/",
    "docs/",
    ".github/",
    "AGENTS.md",
    "CLAUDE.md",
    ".ruff_cache/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".nox/",
    "dist/",
    "build/",
    "htmlcov/",
]

[tool.ruff]
line-length    = 100
target-version = "py311"
exclude = [
    "tests",
    "examples",
    "docs",
    "scripts",
    ".nox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["S101"]
"noxfile.py" = []

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
warn_unused_ignores    = false
cache_dir              = "/tmp/mypy-cache-lauren-mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts      = "-m 'not benchmark and not eval'"
markers      = [
    "benchmark: performance benchmarks, excluded from default run",
    "eval: evaluation tests requiring live MCP servers, excluded from default run",
]
testpaths  = ["tests"]
pythonpath = ["src", "../lauren-framework"]

[tool.coverage.run]
source = ["src/lauren_mcp"]
omit   = ["tests/*"]

[tool.coverage.report]
# 88% is achievable with base deps installed; running with [all] extras reaches 94%+
fail_under   = 88
show_missing = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "nox>=2024.4",
    "prek>=0.3",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "griffe>=1.0",
    "hatchling>=1.21",
    "hatch-vcs>=0.4",
    "twine>=5.0",
]
