[project]
name = "filesystem-mcp-example"
version = "0.1.0"
description = "Filesystem MCP server and OpenAI CLI client — lauren-mcp example"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Lauren Contributors" }]

# Runtime dependencies for the server
dependencies = [
    "lauren-mcp[all]>=0.0.0",
    "uvicorn>=0.31",
]

[project.optional-dependencies]
# Extra deps for client.py
client = [
    "openai>=1.30",
    "rich>=13.0",
    "python-dotenv>=1.0",
]
# Deploy to Modal
deploy = [
    "modal>=0.64",
]
# Everything
all = [
    "filesystem-mcp-example[client,deploy]",
]

[tool.uv]
package = false

[tool.uv.sources]
lauren-mcp = { path = "../.." }



[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]
ignore = ["E501"]
